packages/melody-compiler/__tests__/__fixtures__/success/static_to_dynamic_attrs.template
<div>
    {% if foo %}
        <div class="foo"></div>
    {% else %}
        <div class="foo {{ bar ? 'bar' }}"></div>
    {% endif %}
</div>


