packages/melody-compiler/__tests__/__fixtures__/error/wrong_import.template
<div>
  {% import "forms.html" as foo %}
</div>
